<resources>
    <string name="app_name">WidgetsContainers</string>
    <string name="title">Widgets and Containers</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">radio button</string>
    <string name="weight_box_model">Weight Box Model</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="overlap">Overlap</string>
    <string name="scroll_view">Scroll View</string>
    <string name="table_layout">Table Layout</string>
    <string name="checked">Tick !!!</string>
    <string name="unchecked">not ticked :(</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="_50">50%</string>
    <string name="_30">30%</string>
    <string name="_20">20%</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="url">URL:</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="i_am_big">I AM BIG</string>
    <string name="i_am_small">I am small</string>
</resources>