<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4A49"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/table_layout"
        android:textColor="#8E8E8E"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View style="@style/Divider" android:layout_marginTop="30dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:text="@string/url" />

            <EditText android:id="@+id/entry"
                android:layout_span="3"
                android:background="@drawable/menu_button"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:textColor="@color/purple_500"
                android:autofillHints="true"
                android:hint="@string/enter_your_text_here"
                android:inputType="text" />

        </TableRow>

        <TableRow>

            <Button android:id="@+id/cancel"
                android:layout_column="2"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />

            <Button android:id="@+id/ok"
                android:text="@string/ok"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

    </TableLayout>

</LinearLayout>