<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#4C4A49"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_box_model"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#8E8E8E"/>

    <View style="@style/Divider" android:layout_marginTop="30dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/_50"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            />

        <Button
            android:text="@string/_30"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            />

        <Button
            android:text="@string/_20"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            />
    </LinearLayout>

</LinearLayout>