<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4A49"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/overlap"
        android:textColor="#8E8E8E"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View style="@style/Divider" android:layout_marginTop="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/i_am_big"
            android:textSize="120sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <Button
            android:text="@string/i_am_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>